--- a/loginassets/css/loginstyles.css
+++ b/loginassets/css/loginstyles.css
@@ -1,19 +1,26 @@
 /*===== GOOGLE FONTS =====*/
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 /*===== VARIABLES CSS =====*/
 :root{
-  /*===== Colores =====*/
-  --first-color: #9D4BFF;
-  --first-color-dark: #23004D;
-  --first-color-light: #A49EAC;
-  --first-color-lighten: #F2F2F2;
+  /*===== Colors =====*/
+  --first-color: #069C54;
+  --first-color-alt: #048654;
+  --title-color: #393939;
+  --text-color: #707070;
+  --text-color-light: #A6A6A6;
+  --body-color: #FBFEFD;
+  --container-color: #FFFFFF;
 
   /*===== Font and typography =====*/
-  --body-font: 'Open Sans', sans-serif;
+  --body-font: 'Poppins', sans-serif;
+  --biggest-font-size: 2.25rem;
   --h1-font-size: 1.5rem;
+  --h2-font-size: 1.25rem;
+  --h3-font-size: 1rem;
   --normal-font-size: .938rem;
   --small-font-size: .813rem;
+  --smaller-font-size: .75rem;
 }
 
 @media screen and (min-width: 768px){
@@ -65,6 +72,7 @@ img{
 
 .login__img{
   justify-self: center;
+  
 }
 
 .login__img img{
