--- a/loginassets/css/loginstyles.css
+++ b/loginassets/css/loginstyles.css
@@ -1,245 +1,109 @@
-/*===== GOOGLE FONTS =====*/
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
-
-/*===== VARIABLES CSS =====*/
-:root{
-  /*===== Colors =====*/
-  --first-color: #069C54;
-  --first-color-alt: #048654;
-  --title-color: #393939;
-  --text-color: #707070;
-  --text-color-light: #A6A6A6;
-  --body-color: #FBFEFD;
-  --container-color: #FFFFFF;
-
-  /*===== Font and typography =====*/
-  --body-font: 'Poppins', sans-serif;
-  --biggest-font-size: 2.25rem;
-  --h1-font-size: 1.5rem;
-  --h2-font-size: 1.25rem;
-  --h3-font-size: 1rem;
-  --normal-font-size: .938rem;
-  --small-font-size: .813rem;
-  --smaller-font-size: .75rem;
-}
-
-@media screen and (min-width: 768px){
-  :root{
-    --normal-font-size: 1rem;
-    --small-font-size: .875rem;
-  }
-}
-
-/*===== BASE =====*/
-*,::before,::after{
-  box-sizing: border-box;
-}
-
-body{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+*{
   margin: 0;
   padding: 0;
-  font-family: var(--body-font);
-  font-size: var(--normal-font-size);
-  color: #048654;
+  box-sizing: border-box;
+  font-family: 'Poppins',sans-serif;
 }
-
-h1{
-  margin: 0;
+body{
+  background: #1abc9c;
+  overflow: hidden;
 }
-
-a{
+::selection{
+  background: rgba(26,188,156,0.3);
+}
+.container{
+  max-width: 440px;
+  padding: 0 20px;
+  margin: 170px auto;
+}
+.wrapper{
+  width: 100%;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0px 4px 10px 1px rgba(0,0,0,0.1);
+}
+.wrapper .title{
+  height: 90px;
+  background: #16a085;
+  border-radius: 5px 5px 0 0;
+  color: #fff;
+  font-size: 30px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wrapper form{
+  padding: 30px 25px 25px 25px;
+}
+.wrapper form .row{
+  height: 45px;
+  margin-bottom: 15px;
+  position: relative;
+}
+.wrapper form .row input{
+  height: 100%;
+  width: 100%;
+  outline: none;
+  padding-left: 60px;
+  border-radius: 5px;
+  border: 1px solid lightgrey;
+  font-size: 16px;
+  transition: all 0.3s ease;
+}
+form .row input:focus{
+  border-color: #16a085;
+  box-shadow: inset 0px 0px 2px 2px rgba(26,188,156,0.25);
+}
+form .row input::placeholder{
+  color: #999;
+}
+.wrapper form .row i{
+  position: absolute;
+  width: 47px;
+  height: 100%;
+  color: #fff;
+  font-size: 18px;
+  background: #16a085;
+  border: 1px solid #16a085;
+  border-radius: 5px 0 0 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wrapper form .pass{
+  margin: -8px 0 20px 0;
+}
+.wrapper form .pass a{
+  color: #16a085;
+  font-size: 17px;
   text-decoration: none;
 }
-
-img{
-  max-width: 100%;
-  height: auto;
-  display: block;
+.wrapper form .pass a:hover{
+  text-decoration: underline;
 }
-
-/*===== LOGIN =====*/
-.login{
-  display: grid;
-  grid-template-columns: 100%;
-  height: 100vh;
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-}
-
-.login__content{
-  display: grid;
-}
-
-.login__img{
-  justify-self: center;
-  
-}
-
-.login__img img{
-  width: 310px;
-  margin-top: 1.5rem;
-}
-
-.login__forms{
-  position: relative;
-  height: 368px;
-}
-
-.login__registre, .login__create{
-  position: absolute;
-  bottom: 1rem;
-  width: 100%;
-  background-color: var(--first-color-lighten);
-  padding: 2rem 1rem;
-  border-radius: 1rem;
-  text-align: center;
-  box-shadow: 0 8px 20px rgba(35,0,77,.2);
-  animation-duration: .4s;
-  animation-name: animate-login;
-}
-
-@keyframes animate-login{
-  0%{
-    transform: scale(1,1);
-  }
-  50%{
-    transform: scale(1.1,1.1);
-  }
-  100%{
-    transform: scale(1,1);
-  }
-}
-
-.login__title{
-  font-size: var(--h1-font-size);
-  margin-bottom: 2rem;
-}
-
-.login__box{
-  display: grid;
-  grid-template-columns: max-content 1fr;
-  column-gap: .5rem;
-  padding: 1.125rem 1rem;
-  background-color: #FFF;
-  margin-top: 1rem;
-  border-radius: .5rem;
-}
-
-.login__icon{
-  font-size: 1.5rem;
-  color: var(--first-color);
-}
-
-.login__input{
-  border: none;
-  outline: none;
-  font-size: var(--normal-font-size);
-  font-weight: 700;
-  color: var(--first-color-dark);
-}
-
-.login__input::placeholder{
-  font-size: var(--normal-font-size);
-  font-family: var(--body-font);
-  color: var(--first-color-light);
-}
-
-.login__forgot{
-  display: block;
-  width: max-content;
-  margin-left: auto;
-  margin-top: .5rem;
-  font-size: var(--small-font-size);
-  font-weight: 600;
-  color: var(--first-color-light);
-}
-
-.login__button{
-  display: block;
-  padding: 1rem;
-  margin: 2rem 0;
-  background-color: var(--first-color);
-  color: #FFF;
-  font-weight: 600;
-  text-align: center;
-  border-radius: .5rem;
-  transition: .3s;
-}
-
-.login__button:hover{
-  background-color: var(--first-color-dark);
-}
-
-.login__account, .login__signin, .login__signup{
-  font-weight: 600;
-  font-size: var(--small-font-size);
-}
-
-.login__account{
-  color: var(--first-color-dark);
-}
-
-.login__signin, .login__signup{
-  color: var(--first-color);
+.wrapper form .button input{
+  color: #fff;
+  font-size: 20px;
+  font-weight: 500;
+  padding-left: 0px;
+  background: #16a085;
+  border: 1px solid #16a085;
   cursor: pointer;
 }
-
-
-
-/*Show login*/
-.block{
-  display: block;
+form .button input:hover{
+  background: #12876f;
 }
-
-/*Hidden login*/
-.none{
-  display: none;
+.wrapper form .signup-link{
+  text-align: center;
+  margin-top: 20px;
+  font-size: 17px;
 }
-
-/* ===== MEDIA QUERIES =====*/
-@media screen and (min-width: 576px){
-  .login__forms{
-    width: 348px;
-    justify-self: center;
-  }
+.wrapper form .signup-link a{
+  color: #16a085;
+  text-decoration: none;
 }
-
-@media screen and (min-width: 1024px){
-  .login{
-    height: 100vh;
-    overflow: hidden;
-  }
-
-  .login__content{
-    grid-template-columns: repeat(2, max-content);
-    justify-content: center;
-    align-items: center;
-    margin-left: 10rem;
-  }
-
-  .login__img{
-    display: flex;
-    width: 600px;
-    height: 588px;
-    background-color: var(--first-color-lighten);
-    border-radius: 1rem;
-    padding-left: 1rem;
-  }
-
-  .login__img img{
-    width: 390px;
-    margin-top: 0;
-  }
-
-  .login__registre, .login__create{
-    left: -11rem;
-  }
-
-  .login__registre{
-    bottom: -2rem;
-  }
-
-  .login__create{
-    bottom: -5.5rem;
-  }
+form .signup-link a:hover{
+  text-decoration: underline;
 }
