--- a/loginassets/css/loginstyles.css
+++ b/loginassets/css/loginstyles.css
@@ -6,7 +6,7 @@
   font-family: 'Poppins',sans-serif;
 }
 body{
-  background: #1abc9c;
+  background: #ffffff;
   overflow: hidden;
 }
 ::selection{
