--- a/loginassets/css/loginstyles.css
+++ b/loginassets/css/loginstyles.css
@@ -21,7 +21,7 @@ section {
 }
 
 section.side {
-  background: url(./images/bk.png) no-repeat;
+  background: url(loginstyle.css/img/bk.png) no-repeat;
   background-size: 100% 102%;
 }
 
